crates/rome_js_formatter/tests/specs/prettier/js/tuple/tuple-trailing-comma.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\tuple\\tuple-trailing-comma.js"
---

# Input

```js
#[1,]
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1 +1 @@
-#[1];
+#[1,]
```

# Output

```js
#[1,]
```


# Errors
```
tuple-trailing-comma.js:1:1 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found '#[1,]'
  
  × Expected a statement here
  
    ┌─ tuple-trailing-comma.js:1:1
    │
  1 │ #[1,]
    │ ^^^^^
  
tuple-trailing-comma.js:1:1 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `!` following a `#`, but found none
  
    ┌─ tuple-trailing-comma.js:1:1
    │
  1 │ #[1,]
    │ ^
  

```


